fix the scrollbar in remover replacer & photoshoot

--- a/src/views/DesignEditor/components/ModalPanels/ObjectRemover/style.module.css
+++ b/src/views/DesignEditor/components/ModalPanels/ObjectRemover/style.module.css
@@ -3,6 +3,24 @@
   border-radius: 20px 0px 0px 20px;
   width: 380px;
 }
+.objRemoverCon {
+  height: 75vh;
+  overflow-y: scroll;
+  padding-bottom: 40px;
+}
+
+.objRemoverCon::-webkit-scrollbar {
+  width: 4px;
+}
+
+.objRemoverCon::-webkit-scrollbar-thumb {
+  cursor: pointer;
+  background-color: #d8dade;
+}
+
+.objRemoverCon::-webkit-scrollbar-track {
+  background-color: white; /* Set the color of the track */
+}
 
 .heading {
   display: flex;
