--- a/src/views/DesignEditor/components/ModalPanels/ObjectReplacer/style.module.css
+++ b/src/views/DesignEditor/components/ModalPanels/ObjectReplacer/style.module.css
@@ -4,6 +4,23 @@
   width: 380px;
 }
 
+.objRemoverCon {
+  height: 75vh;
+  overflow-y: scroll;
+  padding-bottom: 40px;
+}
+.objRemoverCon::-webkit-scrollbar {
+  width: 4px;
+}
+
+.objRemoverCon::-webkit-scrollbar-thumb {
+  cursor: pointer;
+  background-color: #d8dade;
+}
+
+.objRemoverCon::-webkit-scrollbar-track {
+  background-color: white; /* Set the color of the track */
+}
 .heading {
   display: flex;
   flex-direction: row;
