--- a/src/views/DesignEditor/components/ModalPanels/ProductPhotoShoot/style.module.css
+++ b/src/views/DesignEditor/components/ModalPanels/ProductPhotoShoot/style.module.css
@@ -13,7 +13,16 @@
   border-bottom-right-radius: 20px;
 }
 .productPhotoCon::-webkit-scrollbar {
-  width: 0;
+  width: 4px;
+}
+
+.productPhotoCon::-webkit-scrollbar-thumb {
+  cursor: pointer;
+  background-color: #d8dade;
+}
+
+.productPhotoCon::-webkit-scrollbar-track {
+  background-color: white; /* Set the color of the track */
 }
 .heading {
   display: flex;
